--- a/test/sancus/fork/Makefile.vulnerable
+++ b/test/sancus/fork/Makefile.vulnerable
@@ -6,5 +6,5 @@ include ../Makefile.include
 
 LDFLAGS += -lsancus-step
 
-$(EXE): fork.o
-$(EXE): main.o
+$(EXE).nomac: fork.o
+$(EXE).nomac: main.o
