--- a/test/sancus/ifthenloop/Makefile.vulnerable
+++ b/test/sancus/ifthenloop/Makefile.vulnerable
@@ -6,5 +6,5 @@ include ../Makefile.include
 
 LDFLAGS += -lsancus-step
 
-$(EXE): ifthenloop.o
-$(EXE): main.o
+$(EXE).nomac: ifthenloop.o
+$(EXE).nomac: main.o
