--- a/test/sancus/diamond/Makefile.vulnerable
+++ b/test/sancus/diamond/Makefile.vulnerable
@@ -6,5 +6,5 @@ include ../Makefile.include
 
 LDFLAGS += -lsancus-step
 
-$(EXE): diamond.o
-$(EXE): main.o
+$(EXE).nomac: diamond.o
+$(EXE).nomac: main.o
