--- a/test/sancus/ifcompound/Makefile.vulnerable
+++ b/test/sancus/ifcompound/Makefile.vulnerable
@@ -6,5 +6,5 @@ include ../Makefile.include
 
 LDFLAGS += -lsancus-step
 
-$(EXE): ifcompound.o
-$(EXE): main.o
+$(EXE).nomac: ifcompound.o
+$(EXE).nomac: main.o
