--- a/test/sancus/ifthenloopif/Makefile.vulnerable
+++ b/test/sancus/ifthenloopif/Makefile.vulnerable
@@ -6,5 +6,5 @@ include ../Makefile.include
 
 LDFLAGS += -lsancus-step
 
-$(EXE): ifthenloopif.o
-$(EXE): main.o
+$(EXE).nomac: ifthenloopif.o
+$(EXE).nomac: main.o
