--- a/test/sancus/ifthenlooplooptail/Makefile.vulnerable
+++ b/test/sancus/ifthenlooplooptail/Makefile.vulnerable
@@ -6,5 +6,5 @@ include ../Makefile.include
 
 LDFLAGS += -lsancus-step
 
-$(EXE): ifthenlooplooptail.o
-$(EXE): main.o
+$(EXE).nomac: ifthenlooplooptail.o
+$(EXE).nomac: main.o
