--- a/test/sancus/indirect/Makefile.vulnerable
+++ b/test/sancus/indirect/Makefile.vulnerable
@@ -6,5 +6,5 @@ include ../Makefile.include
 
 LDFLAGS += -lsancus-step
 
-$(EXE): indirect.o
-$(EXE): main.o
+$(EXE).nomac: indirect.o
+$(EXE).nomac: main.o
