--- a/test/sancus/loop/Makefile.vulnerable
+++ b/test/sancus/loop/Makefile.vulnerable
@@ -6,5 +6,5 @@ include ../Makefile.include
 
 LDFLAGS += -lsancus-step
 
-$(EXE): loop.o
-$(EXE): main.o
+$(EXE).nomac: loop.o
+$(EXE).nomac: main.o
