--- a/test/sancus/modexp/Makefile.vulnerable
+++ b/test/sancus/modexp/Makefile.vulnerable
@@ -6,5 +6,5 @@ include ../Makefile.include
 
 LDFLAGS += -lsancus-step
 
-$(EXE): modexp.o
-$(EXE): main.o
+$(EXE).nomac: modexp.o
+$(EXE).nomac: main.o
