--- a/test/sancus/mulhi3/Makefile.vulnerable
+++ b/test/sancus/mulhi3/Makefile.vulnerable
@@ -6,5 +6,5 @@ include ../Makefile.include
 
 LDFLAGS += -lsancus-step
 
-$(EXE): mulhi3.o
-$(EXE): main.o
+$(EXE).nomac: mulhi3.o
+$(EXE).nomac: main.o
