--- a/test/sancus/threeway/Makefile.vulnerable
+++ b/test/sancus/threeway/Makefile.vulnerable
@@ -6,5 +6,5 @@ include ../Makefile.include
 
 LDFLAGS += -lsancus-step
 
-$(EXE): threeway.o
-$(EXE): main.o
+$(EXE).nomac: threeway.o
+$(EXE).nomac: main.o
