--- a/test/sancus/triangle/Makefile.vulnerable
+++ b/test/sancus/triangle/Makefile.vulnerable
@@ -6,5 +6,5 @@ include ../Makefile.include
 
 LDFLAGS += -lsancus-step
 
-$(EXE): triangle.o
-$(EXE): main.o
+$(EXE).nomac: triangle.o
+$(EXE).nomac: main.o
