--- a/test/sancus/keypad/Makefile.vulnerable
+++ b/test/sancus/keypad/Makefile.vulnerable
@@ -1,11 +1,16 @@
 EXE = keypad.vulnerable
 
 keypad.ll: CFLAGS += -Os
+keypad_mmio.sancus.ll: SANCUS_TRANSFORM_FLAGS += --fix-data-section
+
+#keypad.s: LLCFLAGS += -debug-only=msp430-lower
+#keypad.s: LLCFLAGS += -print-machineinstrs
+#keypad.s: LLCFLAGS += -filter-print-funcs=keypad_poll
 
 include ../Makefile.include
 
 LDFLAGS += -lsancus-step
 
-$(EXE): keypad.o
-$(EXE): keypad_mmio.o
-$(EXE): main.o
+$(EXE).nomac: keypad.o
+$(EXE).nomac: keypad_mmio.o
+$(EXE).nomac: main.o
