--- a/test/sancus/mulmod8.ifc/Makefile.vulnerable
+++ b/test/sancus/mulmod8.ifc/Makefile.vulnerable
@@ -1,6 +1,7 @@
 EXE = mulmod8.vulnerable
 
-mulmod8.ll: CFLAGS += -Os
+#mulmod8.ll: CFLAGS += -Os
+
 #mulmod8.s: LLCFLAGS += -print-machineinstrs
 #mulmod8.s: LLCFLAGS += -filter-print-funcs=mulmod8_
 
