--- a/test/sancus/keypad.ifc/Makefile.vulnerable
+++ b/test/sancus/keypad.ifc/Makefile.vulnerable
@@ -1,4 +1,4 @@
-EXE = keypad.vulnerable
+EXE = keypad.ifc.vulnerable
 
 #keypad.ll: CFLAGS += -Os
 keypad_mmio.sancus.ll: SANCUS_TRANSFORM_FLAGS += --fix-data-section
